src/objects/COVA_Time__c.object
<CustomObject>
    <fields>
        <fullName>COVA_BillingRule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>COVA_BillingRule</label>
        <referenceTo>COVA_BillingRule__c</referenceTo>
        <relationshipName>COVA_Times</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>COVA_Date__c</fullName>
        <label>COVA_Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>COVA_Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>COVA_Project</label>
        <referenceTo>COVA_Project__c</referenceTo>
        <relationshipName>COVA_Times</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>COVA_Task__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>COVA_Task</label>
        <referenceTo>COVA_Task__c</referenceTo>
        <relationshipName>COVA_Times</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>COVA_TimeSpend__c</fullName>
        <label>COVA_TimeSpend</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>COVA_Time</label>
    <nameField>
        <label>COVA_Time Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>COVA_Times</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>